syntax = "proto3";

package Messages;

import "google/protobuf/any.proto";

message Deactivate
{
    int32 d = 1;
}

service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
  }
  message HelloRequest {
    string name = 1;
  }
  
  // The response message containing the greetings
  message HelloReply {
    string message = 1;
  }